--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Confirm</h2>
+<h2 mat-dialog-title>{{ 'COMMON.CONFIRM' | translate }}</h2>
 <div mat-dialog-content>
   <p>{{confirmMessage}}</p>
 </div>
