--- a/src/app/pages/student-home/student-home.component.html
+++ b/src/app/pages/student-home/student-home.component.html
@@ -1,3 +1,4 @@
+<script src="/socket.io/socket.io.js"></script>
 <div class="student-profile">
   <div class="row" *ngIf="reward">
     <div class="col s12 m6">
