--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -10,7 +10,7 @@
     translate }}</a>
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/assistance">{{
     'ASSISTANCE.TITLE' | translate }}</a>
-  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaires">{{
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaire">{{
     'QUESTIONNAIRES.TITLE' | translate }}</a>
   <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/pointsbadges">{{
     'POINTSBADGES.TITLE' | translate }}</a>
