--- a/src/app/pages/groupStudents/groupStudents.html
+++ b/src/app/pages/groupStudents/groupStudents.html
@@ -1,46 +1,51 @@
 <div class="groupStudent-content">
-    <html>
-      <head>
-        <style>
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
+  <html>
 
-        td, th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
+  <head>
+    <style>
+      table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+      }
 
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-        </style>
-      </head>
-      <body>
-        <table>
-        <tr width="35">
-          <th>{{ 'STUDIENTS.AVATAR' | translate }}</th>
-          <th>{{ 'STUDIENTS.ID' | translate }}</th>
-          <th>{{ 'STUDIENTS.NAME' | translate }}</th>
-          <th>{{ 'STUDIENTS.SURNAME' | translate }}</th>
-          <th>{{ 'STUDIENTS.EMAIL' | translate }}</th>
+      td,
+      th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
 
-        </tr>
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
 
-        <tr *ngFor="let student of students">
-            <td><img src="{{student.avatar.image}}" width="50" height="50"></td>
-              <td>{{student.id}}</td>
-          <td>{{student.name}}</td>
-          <td>{{student.surname}}</td>
-          <td>{{student.email}}</td>
+    </style>
+  </head>
 
-        </tr>
-        </table>
-      </body>
-    </html>
-  </div>
+  <body>
 
+    <button mat-raised-button (click)="showGames()">{{ GROUPS.MYGAMES |translate }}</button>
 
+    <table>
+      <tr width="35">
+        <th>{{ 'STUDIENTS.AVATAR' | translate }}</th>
+        <th>{{ 'STUDIENTS.ID' | translate }}</th>
+        <th>{{ 'STUDIENTS.NAME' | translate }}</th>
+        <th>{{ 'STUDIENTS.SURNAME' | translate }}</th>
+        <th>{{ 'STUDIENTS.EMAIL' | translate }}</th>
+
+      </tr>
+
+      <tr *ngFor="let student of students">
+        <td><img src="{{student.avatar.image}}" width="50" height="50"></td>
+        <td>{{student.id}}</td>
+        <td>{{student.name}}</td>
+        <td>{{student.surname}}</td>
+        <td>{{student.email}}</td>
+      </tr>
+    </table>
+  </body>
+
+  </html>
+</div>
