FUNCIONA BOTON RETURN DIALOG

--- a/src/app/pages/questionnaire/questionnaire.html
+++ b/src/app/pages/questionnaire/questionnaire.html
@@ -1,6 +1,5 @@
 <div class="questionnaire-content">
-  <button mat-raised-button (click)= openDialog()>{{ 'QUESTIONNAIRES.MYQUESTIONNAIRES'
-    |translate }}</button>
+  <button mat-raised-button (click)=openDialog()>{{ 'QUESTIONNAIRES.MYQUESTIONNAIRES'|translate }}</button>
   <button mat-raised-button routerLink="/questionnaire/createquestionnaire">{{ 'QUESTIONNAIRES.CREATE' | translate }}</button>
   <button mat-raised-button routerLink="/questionnaire/viewquestions">{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}</button>
   <button mat-raised-button routerLink="/questionnaire/createquestion">{{ 'QUESTIONNAIRES.NEWQUESTION' | translate }}</button>
