--- a/src/app/pages/questionnaire/questionnaire.html
+++ b/src/app/pages/questionnaire/questionnaire.html
@@ -4,3 +4,58 @@
   <button mat-raised-button routerLink="/questionnaire/viewquestions">{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}</button>
   <button mat-raised-button routerLink="/questionnaire/createquestion">{{ 'QUESTIONNAIRES.NEWQUESTION' | translate }}</button>
 </div>
+
+<mat-tab-group>
+  <mat-tab label="{{'QUESTIONNAIRES.MYQUESTIONNAIRES'|translate }}">
+    <h5 mat-subheader>{{'QUESTIONNAIRES.MYQUESTIONNAIRES'|translate }}</h5>
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let Questionnaire of questionnaires" hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{Questionnaire.name}}
+          </mat-panel-title>
+          <mat-panel-description>
+            {{Questionnaire.description}}
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div mat-dialog>
+          {{Questionnaire.question}}
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </mat-tab>
+  <mat-tab label="Second"> Content 2
+
+
+
+
+
+
+  </mat-tab>
+  <mat-tab label="{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}">
+
+    <!-- TODO:  PLANTEARSE AÑADR UN FILTRO DE CATEGORIA -->
+
+    <h5 mat-subheader>{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}</h5>
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let quest of question" hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            {{quest.category}}
+          </mat-panel-title>
+          <mat-panel-description>
+            {{quest.statement}}
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div mat-dialog>
+          {{quest.difficulty}}
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </mat-tab>
+  <mat-tab label="Fourd"> Content 4
+
+
+
+  </mat-tab>
+</mat-tab-group>
