--- a/src/app/pages/questionnaire/questionnaire.html
+++ b/src/app/pages/questionnaire/questionnaire.html
@@ -1,8 +1,8 @@
 <div class="questionnaire-content">
-  <button mat-raised-button (click)=openDialog()>{{ 'QUESTIONNAIRES.MYQUESTIONNAIRES'|translate }}</button>
-  <button mat-raised-button routerLink="/questionnaire/createquestionnaire">{{ 'QUESTIONNAIRES.CREATE' | translate }}</button>
+  <button mat-raised-button (click)=openViewQuestionnairesDialog()>{{ 'QUESTIONNAIRES.MYQUESTIONNAIRES'|translate }}</button>
+  <button mat-raised-button (click)="openCreateQuestionnairesDialog()">{{ 'QUESTIONNAIRES.CREATE' | translate }}</button>
   <button mat-raised-button routerLink="/questionnaire/viewquestions">{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}</button>
-  <button mat-raised-button routerLink="/questionnaire/createquestion">{{ 'QUESTIONNAIRES.NEWQUESTION' | translate }}</button>
+  <button mat-raised-button (click)="openCreateQuestionsDialog()">{{ 'QUESTIONNAIRES.NEWQUESTION' | translate }}</button>
 </div>
 
 <mat-tab-group>
@@ -21,16 +21,22 @@
         <div mat-dialog>
           {{Questionnaire.question}}
         </div>
+        <mat-action-row>
+          <button mat-button (click)="doSomething(Questionnaire.id)"> Your Text</button>
+        </mat-action-row>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-tab>
-  <mat-tab label="Second"> Content 2
-
-
-
-
-
-
+  <mat-tab label="{{ 'QUESTIONNAIRES.NEWQUESTION' | translate }}"> Content 2
+    <div class="form-group">
+      <mat-form-field>
+        <mat-select placeholder="{{ 'QUESTIONNAIRES.TYPEOFQUESTION' | translate }}">
+          <mat-option>{{ 'QUESTIONNAIRES.TYPEOFQUESTION1' | translate }}</mat-option>
+          <mat-option value="option1">{{ 'QUESTIONNAIRES.TYPEOFQUESTION2' | translate }}</mat-option>
+          <mat-option value="option2">{{ 'QUESTIONNAIRES.TYPEOFQUESTION3' | translate }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
   </mat-tab>
   <mat-tab label="{{ 'QUESTIONNAIRES.MYQUESTIONS' | translate }}">
 
