--- a/src/app/pages/questionnaire/createQuestionnairesDialogComponent.html
+++ b/src/app/pages/questionnaire/createQuestionnairesDialogComponent.html
@@ -10,27 +10,45 @@
   }
 
 </style>
-
-<div class="form-group">
+<mat-dialog-content>
+  <mat-form-field appearance="outline">
+    <input matInput [(ngModel)]="data.name" placeholder="Nombre del Cuestionario">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="outline">
+    <input matInput [(ngModel)]="data.description" placeholder="Descripcion del Cuestionario">
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="outline">
+    <input matInput [(ngModel)]="data.image" placeholder="Imagen del Cuestionario">
+  </mat-form-field>
+  <br>
+  Selecciona las preguntas que quieres incluir al questionario
+  <br>
+  <table>
+    <tr width="35">
+      <th>Imagen</th>
+      <th>Id</th>
+      <th>Categoria</th>
+      <th>Enunciado</th>
+    </tr>
+    <tr *ngFor="let quest of data.questionshtml ;let i=index" (click)=" myFn(quest.id)">
+      <td><img src="{{quest.image}}" width="50" height="50"></td>
+      <td>{{quest.id}}</td>
+      <td>{{quest.category}}</td>
+      <td>{{quest.statement}}</td>
+    </tr>
+  </table>
+  <br>
+  <br>
   <mat-form-field>
-    <mat-select placeholder="{{ 'QUESTIONNAIRES.TYPEOFQUESTION' | translate }}">
-      <mat-option (click)="eleccion0()" value="ninguna">{{ 'QUESTIONNAIRES.TYPEOFQUESTION1' | translate }}</mat-option>
-      <mat-option (click)="eleccion1()" value="multirespuesta">{{ 'QUESTIONNAIRES.TYPEOFQUESTION2' | translate
-        }}</mat-option>
-      <mat-option value="pregunta abierta" (click)="eleccion2()">{{ 'QUESTIONNAIRES.TYPEOFQUESTION3' | translate }}</mat-option>
+    <mat-select placeholder="Selecciona las preguntas" [(ngModel)]="data.questionId" multiple>
+      <mat-option *ngFor="let quest of data.questionshtml" value={{quest.id}}>
+        {{quest.statement}}</mat-option>
     </mat-select>
   </mat-form-field>
   <br>
-  <div *ngIf="option1">
-    <mat-form-field appearance="outline">
-      <input matInput [(ngModel)]="data.cardId" placeholder="DATO1">
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="outline">
-      <input matInput [(ngModel)]="data.cardId2" placeholder="DATO2">
-    </mat-form-field>
-    <button [mat-dialog-close]="data" mat-raised-button color="primary">Crear</button>
-  </div>
-
-  <!-- https://material.angular.io/components/expansion/examples -->
-  <!-- TAMBIEN TENGO UN EJEMPLO DE DATE -->
+  <button [mat-dialog-close]="data" mat-raised-button color="primary">Crear</button>
+</mat-dialog-content>
+<!-- https://material.angular.io/components/expansion/examples -->
+<!-- TAMBIEN TENGO UN EJEMPLO DE DATE -->
