--- a/src/app/pages/questionnaire/questionnaire.scss
+++ b/src/app/pages/questionnaire/questionnaire.scss
@@ -4,11 +4,27 @@
   padding-left: 50px;
 }
 
-
 mat-tab-group {
   padding: 60px;
 }
 
-.example-margin {
-  margin: 0 10px;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.green {
+  color: green;
 }
